tests/errors/template-override_nothing.flbgst
x : Template {  }
y : Template x { a +: { k : 3 } }
yy : y {}
aa : yy.a {}
value : aa.k
